# QuantumRisk

./: .gitattributes  .gitignore  CLAUDE.md  README.md  main.py  package-lock.json  pyproject.toml
backend/: classical_mc.py  main.py  market_data.py  quantum_mc.py  requirements.txt  risk_engine.py
frontend/: .gitignore  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: quantumRisk.js
frontend/src/components/: QuantumVsClassical.jsx  RiskDashboard.jsx  TickerInput.jsx  VaRGauge.jsx
