[project]
name = "quantumrisk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "qiskit>=2.4.1",
    "qiskit-aer>=0.17.2",
    "qiskit-algorithms>=0.4.0",
    "scipy>=1.17.1",
    "yfinance>=1.3.0",
]
