[project]
name = "quantumrisk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pydantic>=2.13.4",
    "qiskit>=2.4.1",
    "qiskit-aer>=0.17.2",
    "qiskit-algorithms>=0.4.0",
    "scipy>=1.17.1",
    "uvicorn>=0.47.0",
    "yfinance>=1.3.0",
]
